--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
          ignore-unfixed: true
 
       - name: Monitor Snyk project
-        uses: snyk/actions/node@master
+        uses: snyk/actions/setup@master
         continue-on-error: true
         env:
          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -51,7 +51,7 @@ jobs:
          args: --all-projects
 
       - name: Test Snyk vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/setup@master
         env:
          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
